# bme680-nextcloud-analytics

./: README.md  pyproject.toml
bme680-nextcloud-analytics/: __init__.py
