[tool.poetry]
name = "bme680-nextcloud-analytics"
version = "0.1.0"
description = ""
authors = ["Magnus Walbeck <mw@mwalbeck.org>"]

[tool.poetry.dependencies]
python = "^3.7"
bme680 = "^1.0.5"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
